fix drage and drop element visibility when .nav-open...mostly

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -133,7 +133,8 @@ body.nav-open .main {
 
 @include media-query(medium) {
   body.nav-open .main {
-    overflow: visible;
+    // overflow: visible;
+    overflow: auto;
     &.subnav-open {
       overflow: hidden;
     }
